--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
+    <section class="promo"></section>
+    <section class="language"></section>
+    <section class="people_behind"></section>
+    <section class="work_with_us"></section>
+    <section class="vacancies"></section>
+    <section class="where_to_find"></section>
+    <section class="perks"></section>
+    <section class="in_news"></section>
+    <section class="shape_of_future"></section>
+    <footer class="footer"></footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
