write html for people behind block

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,41 @@
   <body>
     <section class="promo"></section>
     <section class="language"></section>
-    <section class="people_behind"></section>
+    <section class="people-behind">
+      <h3 class="people-behind__title">The people behind Preply</h3>
+      <p
+        class="people-behind__description"
+      >
+        Great products can only be built by great people. People that know how to work hard... and play hard too.
+      </p>
+      <div class="people-behind__gallery">
+        <img
+          src="./images/peopleBehind/1.png"
+          alt="Proply logo"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/2.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/3.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/4.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/5.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+      </div>
+    </section>
     <section class="work_with_us"></section>
     <section class="vacancies"></section>
     <section class="where_to_find"></section>
