--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
     <section class="promo"></section>
-    <section class="language"></section>
+    <section class="language slogan">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="slogan__wrapper">
+            <div class="slogan__text col-7">
+              <h1 class="slogan__title">
+                Language is a powerful magic
+              </h1>
+
+              <p class="slogan__description">
+                It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
+              </p>
+            </div>
+
+            <img
+              src="./images/slogan/slogan_1.png"
+              alt="power"
+              class="slogan__img col-5"
+            >
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="people_behind"></section>
     <section class="work_with_us"></section>
     <section class="vacancies"></section>
