--- a/src/index.html
+++ b/src/index.html
@@ -41,31 +41,46 @@
         Great products can only be built by great people. People that know how to work hard... and play hard too.
       </p>
       <div class="people-behind__gallery">
-        <img
-          src="./images/peopleBehind/1.png"
-          alt="Proply logo"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/2.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/3.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/4.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/5.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
+        <div class="row mb-3">
+          <div class="people-behind__img--wrp col-5">
+            <img
+              src="./images/peopleBehind/1.png"
+              alt="Proply logo"
+              class="people-behind__img"
+            >
+          </div>
+          <div class="people-behind__img--wrp col-7">
+            <img
+              src="./images/peopleBehind/2.png"
+              alt="Proply team"
+              class="people-behind__img"
+            >
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="people-behind__img--wrp col-4">
+            <img
+              src="./images/peopleBehind/3.png"
+              alt="Proply team"
+              class="people-behind__img"
+            >
+          </div>
+          <div class="people-behind__img--wrp col-5">
+            <img
+              src="./images/peopleBehind/4.png"
+              alt="Proply team"
+              class="people-behind__img"
+            >
+          </div>
+          <div class="people-behind__img--wrp col-3">
+            <img
+              src="./images/peopleBehind/5.png"
+              alt="Proply team"
+              class="people-behind__img"
+            >
+          </div>
+        </div>
       </div>
     </section>
     <section class="work_with_us"></section>
