fixed description width

--- a/src/index.html
+++ b/src/index.html
@@ -34,12 +34,15 @@
       </div>
     </section>
     <section class="people-behind">
-      <h3 class="people-behind__title">The people behind Preply</h3>
-      <p
-        class="people-behind__description"
-      >
-        Great products can only be built by great people. People that know how to work hard... and play hard too.
-      </p>
+      <div class="row justify-content-md-center">
+        <h3 class="people-behind__title">The people behind Preply</h3>
+        <p
+          class="people-behind__description col-9"
+        >
+          Great products can only be built by great people. People that know how to work hard... and play hard too.
+        </p>
+      </div>
+
       <div class="people-behind__gallery">
         <div class="row mb-3">
           <div class="people-behind__img--wrp col-5">
