--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,22 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <section class="promo"></section>
+    <section class="promo">
+      <div class="container">
+        <div class="row promo__top">
+          <div class="promo__logo col-2"></div>
+          <div class="promo__privacy offset-8 col-2">
+            <a href="#">Privacy Policy</a>
+          </div>
+          <div class="promo__content col-8 offset-2">
+            <h2 class="promo__subtitle">PREPLY CAREERS</h2>
+            <h1 class="promo__title">Where your ideas create connections</h1>
+            <a href="#" class="promo__browse">Browse open positions</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="language slogan">
       <div class="container">
         <div class="row no-gutters">
