--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,22 @@
     <section class="promo"></section>
     <section class="language slogan">
       <div class="container">
-        <div class="row no-gutters">
-          <div class="slogan__wrapper">
-            <div class="slogan__text col-7">
-              <h1 class="slogan__title">
-                Language is a powerful magic
-              </h1>
+        <div class="row no-gutters slogan__wrapper">
+          <div class="slogan__text col-xl-7 col-lg-12">
+            <h1 class="slogan__title">
+              Language is a powerful magic
+            </h1>
 
-              <p class="slogan__description">
-                It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
-              </p>
-            </div>
-
-            <img
-              src="./images/slogan/slogan_1.png"
-              alt="power"
-              class="slogan__img col-5"
-            >
+            <p class="slogan__description">
+              It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
+            </p>
           </div>
+
+          <img
+            src="./images/slogan/slogan_1.png"
+            alt="power"
+            class="slogan__img col-xl-5 col-lg-12"
+          >
         </div>
       </div>
     </section>
@@ -68,7 +66,27 @@
         >
       </div>
     </section>
-    <section class="work_with_us"></section>
+    <section class="work_with_us slogan slogan--red">
+      <div class="container">
+        <div class="row no-gutters slogan__wrapper">
+          <div class="slogan__text col-xl-5 col-lg-12">
+            <h1 class="slogan__title">
+              Work with us
+            </h1>
+
+            <p class="slogan__description">
+              Together we’ll change the world of online learning. Want to be a Prepler? Find your role.
+            </p>
+          </div>
+
+          <img
+            src="./images/slogan/slogan_2.png"
+            alt="partnership"
+            class="slogan__img offset-1 col-xl-6 col-lg-12"
+          >
+        </div>
+      </div>
+    </section>
     <section class="vacancies"></section>
     <section class="where_to_find"></section>
     <section class="perks"></section>
