section shape the future add

--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,25 @@
     <section class="where_to_find"></section>
     <section class="perks"></section>
     <section class="in_news"></section>
-    <section class="shape_of_future"></section>
+    <section class="shape_of_future slogan">
+      <div class="container">
+        <div class="row no-gutters slogan__wrapper">
+          <div class="slogan__text col-xl-5 col-lg-12">
+            <h1 class="slogan__title">
+              Shape the future <br> of effective learning
+            </h1>
+
+            <button class="btn btn--light slogan__btn">Browse open positions</button>
+          </div>
+
+          <img
+            src="./images/slogan/slogan_3.png"
+            alt="learning"
+            class="slogan__img slogan__img--center offset-xl-1 col-xl-5 col-lg-12"
+          >
+        </div>
+      </div>
+    </section>
     <footer class="footer"></footer>
 
     <script src="scripts/main.js"></script>
