promo without glassdoor

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,12 @@
           <div class="promo__privacy offset-8 col-2">
             <a href="#">Privacy Policy</a>
           </div>
-          <div class="promo__content col-8 offset-2">
+        </div>
+        <div>
+          <div class="promo__content">
             <h2 class="promo__subtitle">PREPLY CAREERS</h2>
             <h1 class="promo__title">Where your ideas create connections</h1>
-            <a href="#" class="promo__browse">Browse open positions</a>
+            <a href="#" class="btn">Browse open positions</a>
           </div>
         </div>
       </div>
@@ -53,53 +55,38 @@
       </div>
     </section>
     <section class="people-behind">
-      <div class="row justify-content-md-center">
-        <h3 class="people-behind__title">The people behind Preply</h3>
-        <p
-          class="people-behind__description col-9"
-        >
-          Great products can only be built by great people. People that know how to work hard... and play hard too.
-        </p>
-      </div>
-
+      <h3 class="people-behind__title">The people behind Preply</h3>
+      <p
+        class="people-behind__description"
+      >
+        Great products can only be built by great people. People that know how to work hard... and play hard too.
+      </p>
       <div class="people-behind__gallery">
-        <div class="row">
-          <div class="people-behind__img--wrp col-5">
-            <img
-              src="./images/peopleBehind/1.png"
-              alt="Proply logo"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-7">
-            <img
-              src="./images/peopleBehind/2.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-4">
-            <img
-              src="./images/peopleBehind/3.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-5">
-            <img
-              src="./images/peopleBehind/4.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-3">
-            <img
-              src="./images/peopleBehind/5.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-        </div>
+        <img
+          src="./images/peopleBehind/1.png"
+          alt="Proply logo"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/2.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/3.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/4.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/5.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
       </div>
     </section>
     <section class="work_with_us slogan slogan--red">
