--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,68 @@
       </div>
     </section>
     <section class="vacancies"></section>
-    <section class="where_to_find"></section>
+    <section class="where-to-find">
+      <h3 class="where-to-find__title">Where to find us</h3>
+
+      <p class="where-to-find__description">
+        Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
+      </p>
+
+      <div class="where-to-find__gallery gallery">
+        <div class="gallery__controls">
+          <button
+            type="button"
+            class="gallery__button"
+          >
+            Kyiv
+          </button>
+          <button
+            type="button"
+            class="gallery__button"
+          >
+            Barcelona
+          </button>
+        </div>
+
+        <div class="gallery__photos">
+          <div class="gallery__photo--wrp">
+            <img
+              src="./images/whereToFind/kyiv/1.png"
+              alt="Kyiv"
+              class="gallery__photo"
+            >
+          </div>
+
+          <div class="gallery__photo--wrp">
+            <img
+              src="./images/whereToFind/kyiv/2.png"
+              alt="Kyiv"
+              class="gallery__photo"
+            >
+          </div>
+
+          <div class="gallery__photo--wrp">
+            <img
+              src="./images/whereToFind/kyiv/3.png"
+              alt="Kyiv"
+              class="gallery__photo"
+            >
+          </div>
+
+          <div class="gallery__photo--wrp">
+            <img
+              src="./images/whereToFind/kyiv/4.png"
+              alt="Kyiv"
+              class="gallery__photo"
+            >
+          </div>
+        </div>
+      </div>
+
+      <span class="where-to-find__hint">
+        *flexible WFH policy applies due to the current state of COVID-19
+      </span>
+    </section>
     <section class="perks"></section>
     <section class="in_news"></section>
     <section class="shape_of_future"></section>
