add basic layout and styles for perks block

--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,39 @@
     </section>
     <section class="vacancies"></section>
     <section class="where_to_find"></section>
-    <section class="perks"></section>
+    <section class="perks">
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <h3 class="perks__title">Perks and benefits</h3>
+          <p
+            class="perks__description col-12"
+          >
+            A few more reasons why you’ll love working with us.
+          </p>
+
+          <div class="perks__perk perk col-4">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
+              <img
+                alt="study"
+                src="images/perks/Study.svg"
+                class="perk__image perk__image--light"
+              >
+              </img>
+            </div>
+
+            <div>
+              <h4 class="perk__title">
+                Language learning
+              </h4>
+
+              <p class="perk__description">
+                We offer monthly credit to support your passion for learning
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="in_news"></section>
     <section class="shape_of_future"></section>
     <footer class="footer"></footer>
