--- a/src/index.html
+++ b/src/index.html
@@ -109,31 +109,31 @@
       </div>
     </section>
     <section class="vacancies"></section>
-    <section class="where-to-find">
-      <h3 class="where-to-find__title">Where to find us</h3>
+    <section class="where-to-find row justify-content-md-center">
+      <h3 class="where-to-find__title col-8">Where to find us</h3>
 
-      <p class="where-to-find__description">
+      <p class="where-to-find__description col-8">
         Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
       </p>
 
-      <div class="where-to-find__gallery gallery">
+      <div class="where-to-find__gallery gallery col-12">
         <div class="gallery__controls">
           <button
             type="button"
-            class="gallery__button"
+            class="gallery__button gallery__button--kyiv col-3"
           >
             Kyiv
           </button>
           <button
             type="button"
-            class="gallery__button"
+            class="gallery__button gallery__button--barcelona col-3"
           >
             Barcelona
           </button>
         </div>
 
-        <div class="gallery__photos">
-          <div class="gallery__photo--wrp">
+        <div class="gallery__photos row">
+          <div class="gallery__photo--wrp gallery__photo--large-height col-6">
             <img
               src="./images/whereToFind/kyiv/1.png"
               alt="Kyiv"
@@ -141,28 +141,30 @@
             >
           </div>
 
-          <div class="gallery__photo--wrp">
-            <img
-              src="./images/whereToFind/kyiv/2.png"
-              alt="Kyiv"
-              class="gallery__photo"
-            >
-          </div>
+          <div class="col-6 row">
+            <div class="gallery__photo--wrp gallery__photo--small-height col-12">
+              <img
+                src="./images/whereToFind/kyiv/2.png"
+                alt="Kyiv"
+                class="gallery__photo"
+              >
+            </div>
 
-          <div class="gallery__photo--wrp">
-            <img
-              src="./images/whereToFind/kyiv/3.png"
-              alt="Kyiv"
-              class="gallery__photo"
-            >
-          </div>
+            <div class="gallery__photo--wrp gallery__photo--small-height col-6">
+              <img
+                src="./images/whereToFind/kyiv/3.png"
+                alt="Kyiv"
+                class="gallery__photo"
+              >
+            </div>
 
-          <div class="gallery__photo--wrp">
-            <img
-              src="./images/whereToFind/kyiv/4.png"
-              alt="Kyiv"
-              class="gallery__photo"
-            >
+            <div class="gallery__photo--wrp gallery__photo--small-height col-6">
+              <img
+                src="./images/whereToFind/kyiv/4.png"
+                alt="Kyiv"
+                class="gallery__photo"
+              >
+            </div>
           </div>
         </div>
       </div>
