--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <section class="promo"></section>
     <section class="language slogan">
       <div class="container">
-        <div class="row no-gutters slogan__wrapper">
+        <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-7 col-lg-12">
-            <h1 class="slogan__title">
+            <h2 class="slogan__title">
               Language is a powerful magic
-            </h1>
+            </h2>
 
             <p class="slogan__description">
               It helps people develop professionally, brings families closer and much more. We’re creating a digital space for learners and tutors to shape the future of truly effective learning.
@@ -30,7 +30,7 @@
           </div>
 
           <img
-            src="./images/slogan/slogan_1.png"
+            src="./images/slogan/slogan_1.svg"
             alt="power"
             class="slogan__img col-xl-5 col-lg-12"
           >
@@ -89,11 +89,11 @@
     </section>
     <section class="work_with_us slogan slogan--red">
       <div class="container">
-        <div class="row no-gutters slogan__wrapper">
+        <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
-            <h1 class="slogan__title">
+            <h2 class="slogan__title">
               Work with us
-            </h1>
+            </h2>
 
             <p class="slogan__description">
               Together we’ll change the world of online learning. Want to be a Prepler? Find your role.
@@ -101,9 +101,9 @@
           </div>
 
           <img
-            src="./images/slogan/slogan_2.png"
+            src="./images/slogan/slogan_2.svg"
             alt="partnership"
-            class="slogan__img offset-1 col-xl-6 col-lg-12"
+            class="slogan__img offset-xl-1 col-xl-5 col-lg-12"
           >
         </div>
       </div>
@@ -175,17 +175,17 @@
     <section class="in_news"></section>
     <section class="shape_of_future slogan">
       <div class="container">
-        <div class="row no-gutters slogan__wrapper">
+        <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
-            <h1 class="slogan__title">
+            <h2 class="slogan__title">
               Shape the future <br> of effective learning
-            </h1>
+            </h2>
 
             <button class="btn btn--light slogan__btn">Browse open positions</button>
           </div>
 
           <img
-            src="./images/slogan/slogan_3.png"
+            src="./images/slogan/slogan_3.svg"
             alt="learning"
             class="slogan__img slogan__img--center offset-xl-1 col-xl-5 col-lg-12"
           >
