add intendation to perks

--- a/src/index.html
+++ b/src/index.html
@@ -176,14 +176,14 @@
     <section class="perks">
       <div class="container">
         <div class="row justify-content-md-center">
-          <h3 class="perks__title">Perks and benefits</h3>
+          <h3 class="perks__title col-12">Perks and benefits</h3>
           <p
             class="perks__description col-12"
           >
             A few more reasons why you’ll love working with us.
           </p>
 
-          <div class="perks__perk perk col-4">
+          <div class="perks__perk perk col-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="study"
@@ -204,7 +204,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-4">
+          <div class="perks__perk perk col-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="stock"
@@ -225,7 +225,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-4">
+          <div class="perks__perk perk col-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="insurance"
@@ -246,7 +246,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-4">
+          <div class="perks__perk perk col-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="location"
@@ -267,7 +267,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-4">
+          <div class="perks__perk perk col-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="equipment"
@@ -288,7 +288,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-4">
+          <div class="perks__perk perk col-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="holidays"
