--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,51 @@
         </div>
       </div>
     </section>
-    <section class="vacancies"></section>
+    <section class="vacancies">
+      <div class="container">
+        <div class="row">
+
+          <div class="vacancies__wrapper col-10 offset-1">
+            <select name="positions" class="vacancies__select select">
+              <option value="">Engineering (2)</option>
+              <option value="">Data (0)</option>
+              <option value="">Design (0)</option>
+              <option value="">Copy & Localisation (0)</option>
+              <option value="">Customer Support (0)</option>
+              <option value="">Product (0)</option>
+              <option value="">Marketing (0)</option>
+              <option value="">Tutor Operation (0)</option>
+              <option value="">Leadership (0)</option>
+              <option value="">Finance/Legal (0)</option>
+            </select>
+
+            <select name="location" class="vacancies__select select select--dark col-5">
+              <option value="">All locations</option>
+              <option value="">Kyiv</option>
+              <option value="">Barcelona</option>
+            </select>
+          </div>
+
+          <table class="vacancies__list offset-1 col-10">
+            <tr class="vacancies__item">
+              <td class="vacancies__position">Full stack engineer</td>
+              <td class="vacancies__location">Kyiv</td>
+              <td class="vacancies__apply">
+                <button class="vacancies__btn">Apply</button>
+              </td>
+            </tr>
+
+            <tr class="vacancies__item">
+              <td class="vacancies__position">DevOps Manager</td>
+              <td class="vacancies__location">Barcelona</td>
+              <td class="vacancies__apply">
+                <button class="vacancies__btn">Apply</button>
+              </td>
+            </tr>
+          </table >
+        </div>
+      </div>
+    </section>
     <section class="where-to-find row justify-content-md-center">
       <h3 class="where-to-find__title col-8">Where to find us</h3>
 
