--- a/src/index.html
+++ b/src/index.html
@@ -176,14 +176,14 @@
     <section class="perks">
       <div class="container">
         <div class="row justify-content-md-center">
-          <h3 class="perks__title">Perks and benefits</h3>
+          <h3 class="perks__title col-12">Perks and benefits</h3>
           <p
             class="perks__description col-12"
           >
             A few more reasons why you’ll love working with us.
           </p>
 
-          <div class="perks__perk perk col-4">
+          <div class="perks__perk perk col-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="study"
@@ -200,6 +200,111 @@
 
               <p class="perk__description">
                 We offer monthly credit to support your passion for learning
+              </p>
+            </div>
+          </div>
+
+          <div class="perks__perk perk col-6 col-lg-4">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
+              <img
+                alt="stock"
+                src="images/perks/Stock.svg"
+                class="perk__image perk__image--light"
+              >
+              </img>
+            </div>
+
+            <div>
+              <h4 class="perk__title">
+                Stock options
+              </h4>
+
+              <p class="perk__description">
+                Every team member can benefit from our growth as a company
+              </p>
+            </div>
+          </div>
+
+          <div class="perks__perk perk col-6 col-lg-4">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
+              <img
+                alt="insurance"
+                src="images/perks/Insurance.svg"
+                class="perk__image perk__image--light"
+              >
+              </img>
+            </div>
+
+            <div>
+              <h4 class="perk__title">
+                Medical insurance
+              </h4>
+
+              <p class="perk__description">
+                Preply offers a healthcare plan to support your wellbeing
+              </p>
+            </div>
+          </div>
+
+          <div class="perks__perk perk col-6 col-lg-4">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
+              <img
+                alt="location"
+                src="images/perks/Location.svg"
+                class="perk__image perk__image--light"
+              >
+              </img>
+            </div>
+
+            <div>
+              <h4 class="perk__title">
+                Exciting location
+              </h4>
+
+              <p class="perk__description">
+                Our offices are in the heart of both Kyiv and Barcelona
+              </p>
+            </div>
+          </div>
+
+          <div class="perks__perk perk col-6 col-lg-4">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
+              <img
+                alt="equipment"
+                src="images/perks/Equipment.svg"
+                class="perk__image perk__image--light"
+              >
+              </img>
+            </div>
+
+            <div>
+              <h4 class="perk__title">
+                New equipment
+              </h4>
+
+              <p class="perk__description">
+                You’ll receive all the equipment you need to do your best work
+              </p>
+            </div>
+          </div>
+
+          <div class="perks__perk perk col-6 col-lg-4">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
+              <img
+                alt="holidays"
+                src="images/perks/Holidays.svg"
+                class="perk__image perk__image--light"
+              >
+              </img>
+            </div>
+
+            <div>
+              <h4 class="perk__title">
+                Time off & leaves
+              </h4>
+
+              <p class="perk__description">
+                We offer more than 30 days of vacation and an inclusive parental leave
               </p>
             </div>
           </div>
