--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,24 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <section class="promo"></section>
+    <section class="promo">
+      <div class="container">
+        <div class="row promo__top">
+          <div class="promo__logo col-2"></div>
+          <div class="promo__privacy offset-8 col-2">
+            <a href="#">Privacy Policy</a>
+          </div>
+        </div>
+        <div>
+          <div class="promo__content">
+            <h2 class="promo__subtitle">PREPLY CAREERS</h2>
+            <h1 class="promo__title">Where your ideas create connections</h1>
+            <a href="#" class="btn">Browse open positions</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="language slogan">
       <div class="container">
         <div class="row slogan__wrapper">
@@ -48,43 +65,31 @@
       </div>
 
       <div class="people-behind__gallery">
-        <div class="row">
-          <div class="people-behind__img--wrp col-5">
-            <img
-              src="./images/peopleBehind/1.png"
-              alt="Proply logo"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-7">
-            <img
-              src="./images/peopleBehind/2.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-4">
-            <img
-              src="./images/peopleBehind/3.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-5">
-            <img
-              src="./images/peopleBehind/4.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-          <div class="people-behind__img--wrp col-3">
-            <img
-              src="./images/peopleBehind/5.png"
-              alt="Proply team"
-              class="people-behind__img"
-            >
-          </div>
-        </div>
+        <img
+          src="./images/peopleBehind/1.png"
+          alt="Proply logo"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/2.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/3.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/4.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
+        <img
+          src="./images/peopleBehind/5.png"
+          alt="Proply team"
+          class="people-behind__img"
+        >
       </div>
     </section>
     <section class="work_with_us slogan slogan--red">
