--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         </div>
         <div>
           <div class="promo__content">
-            <h2 class="promo__subtitle">PREPLY CAREERS</h2>
+            <p class="promo__subtitle">PREPLY CAREERS</p>
             <h1 class="promo__title">Where your ideas create connections</h1>
             <a href="#" class="btn">Browse open positions</a>
           </div>
