fix containers for where to find block and people behind (#26)
* fix containers for where to find block and people behind

* delete extra space

--- a/src/index.html
+++ b/src/index.html
@@ -55,41 +55,52 @@
       </div>
     </section>
     <section class="people-behind">
-      <div class="row justify-content-md-center">
-        <h2 class="people-behind__title">The people behind Preply</h2>
-        <p
-          class="people-behind__description col-9"
-        >
-          Great products can only be built by great people. People that know how to work hard... and play hard too.
-        </p>
-      </div>
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <h2 class="people-behind__title">The people behind Preply</h2>
 
-      <div class="people-behind__gallery">
-        <img
-          src="./images/peopleBehind/1.png"
-          alt="Proply logo"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/2.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/3.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/4.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
-        <img
-          src="./images/peopleBehind/5.png"
-          alt="Proply team"
-          class="people-behind__img"
-        >
+          <p class="people-behind__description col-8">
+            Great products can only be built by great people. People that know how to work hard... and play hard too.
+          </p>
+
+          <div class="people-behind__gallery row">
+            <div class="people-behind__img--wrp col-5">
+              <img
+                src="./images/peopleBehind/1.png"
+                alt="Proply logo"
+                class="people-behind__img"
+              >
+            </div>
+            <div class="people-behind__img--wrp col-7">
+              <img
+                src="./images/peopleBehind/2.png"
+                alt="Proply team"
+                class="people-behind__img"
+              >
+            </div>
+            <div class="people-behind__img--wrp col-4">
+              <img
+                src="./images/peopleBehind/3.png"
+                alt="Proply team"
+                class="people-behind__img"
+              >
+            </div>
+            <div class="people-behind__img--wrp col-5">
+              <img
+                src="./images/peopleBehind/4.png"
+                alt="Proply team"
+                class="people-behind__img"
+              >
+            </div>
+            <div class="people-behind__img--wrp col-3">
+              <img
+                src="./images/peopleBehind/5.png"
+                alt="Proply team"
+                class="people-behind__img"
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="work_with_us slogan slogan--red">
@@ -114,69 +125,73 @@
       </div>
     </section>
     <section class="vacancies"></section>
-    <section class="where-to-find row justify-content-md-center">
-      <h2 class="where-to-find__title col-8">Where to find us</h2>
+    <section class="where-to-find">
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <h2 class="where-to-find__title col-8">Where to find us</h2>
 
-      <p class="where-to-find__description col-8">
-        Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
-      </p>
+          <p class="where-to-find__description col-8">
+            Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
+          </p>
 
-      <div class="where-to-find__gallery gallery col-12">
-        <div class="gallery__controls">
-          <button
-            type="button"
-            class="gallery__button gallery__button--kyiv col-3"
-          >
-            Kyiv
-          </button>
-          <button
-            type="button"
-            class="gallery__button gallery__button--barcelona col-3"
-          >
-            Barcelona
-          </button>
-        </div>
+          <div class="where-to-find__gallery gallery col-12">
+            <div class="gallery__controls">
+              <button
+                type="button"
+                class="gallery__button gallery__button--kyiv col-3"
+              >
+                Kyiv
+              </button>
+              <button
+                type="button"
+                class="gallery__button gallery__button--barcelona col-3"
+              >
+                Barcelona
+              </button>
+            </div>
 
-        <div class="gallery__photos row">
-          <div class="gallery__photo--wrp gallery__photo--large-height col-6">
-            <img
-              src="./images/whereToFind/kyiv/1.png"
-              alt="Kyiv"
-              class="gallery__photo"
-            >
+            <div class="gallery__photos row">
+              <div class="gallery__photo--wrp gallery__photo--large-height col-6">
+                <img
+                  src="./images/whereToFind/kyiv/1.png"
+                  alt="Kyiv"
+                  class="gallery__photo"
+                >
+              </div>
+
+              <div class="col-6 row">
+                <div class="gallery__photo--wrp gallery__photo--small-height col-12">
+                  <img
+                    src="./images/whereToFind/kyiv/2.png"
+                    alt="Kyiv"
+                    class="gallery__photo"
+                  >
+                </div>
+
+                <div class="gallery__photo--wrp gallery__photo--small-height col-6">
+                  <img
+                    src="./images/whereToFind/kyiv/3.png"
+                    alt="Kyiv"
+                    class="gallery__photo"
+                  >
+                </div>
+
+                <div class="gallery__photo--wrp gallery__photo--small-height col-6">
+                  <img
+                    src="./images/whereToFind/kyiv/4.png"
+                    alt="Kyiv"
+                    class="gallery__photo"
+                  >
+                </div>
+              </div>
+            </div>
           </div>
 
-          <div class="col-6 row">
-            <div class="gallery__photo--wrp gallery__photo--small-height col-12">
-              <img
-                src="./images/whereToFind/kyiv/2.png"
-                alt="Kyiv"
-                class="gallery__photo"
-              >
-            </div>
-
-            <div class="gallery__photo--wrp gallery__photo--small-height col-6">
-              <img
-                src="./images/whereToFind/kyiv/3.png"
-                alt="Kyiv"
-                class="gallery__photo"
-              >
-            </div>
-
-            <div class="gallery__photo--wrp gallery__photo--small-height col-6">
-              <img
-                src="./images/whereToFind/kyiv/4.png"
-                alt="Kyiv"
-                class="gallery__photo"
-              >
-            </div>
-          </div>
+          <span class="where-to-find__hint">
+            *flexible WFH policy applies due to the current state of COVID-19
+          </span>
         </div>
       </div>
-
-      <span class="where-to-find__hint">
-        *flexible WFH policy applies due to the current state of COVID-19
-      </span>
     </section>
     <section class="perks">
       <div class="container">
