--- a/src/index.html
+++ b/src/index.html
@@ -189,11 +189,11 @@
           </p>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="study"
                 src="images/perks/Study.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -210,11 +210,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="stock"
                 src="images/perks/Stock.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -231,11 +231,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="insurance"
                 src="images/perks/Insurance.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -252,11 +252,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="location"
                 src="images/perks/Location.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -273,11 +273,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="equipment"
                 src="images/perks/Equipment.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -294,11 +294,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="holidays"
                 src="images/perks/Holidays.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
