change background for perks image

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
               <img
                 alt="study"
                 src="images/perks/Study.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -205,11 +205,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="stock"
                 src="images/perks/Stock.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -230,7 +230,7 @@
               <img
                 alt="insurance"
                 src="images/perks/Insurance.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -247,11 +247,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="location"
                 src="images/perks/Location.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -272,7 +272,7 @@
               <img
                 alt="equipment"
                 src="images/perks/Equipment.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -289,11 +289,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="holidays"
                 src="images/perks/Holidays.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
