--- a/src/index.html
+++ b/src/index.html
@@ -204,11 +204,11 @@
           </p>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="study"
                 src="images/perks/Study.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -225,11 +225,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="stock"
                 src="images/perks/Stock.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -246,11 +246,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="insurance"
                 src="images/perks/Insurance.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -267,11 +267,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="location"
                 src="images/perks/Location.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -288,11 +288,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="equipment"
                 src="images/perks/Equipment.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
@@ -309,11 +309,11 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
+            <div class="perk__image-wrapper">
               <img
                 alt="holidays"
                 src="images/perks/Holidays.svg"
-                class="perk__image perk__image--light"
+                class="perk__image"
               >
               </img>
             </div>
