--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
             <a href="#">Privacy Policy</a>
           </div>
         </div>
-        <div>
-          <div class="promo__content">
-            <p class="promo__subtitle">PREPLY CAREERS</p>
+        <div class="row">
+          <div class="promo__content col-12">
+            <p class="promo__subtitle">preply careers</p>
             <h1 class="promo__title">Where your ideas create connections</h1>
             <a href="#" class="btn">Browse open positions</a>
           </div>
@@ -352,7 +352,22 @@
         </div>
       </div>
     </section>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="footer__logo"></div>
+          <div class="footer__socials"></div>
+        </div>
+        <div class="row justify-content-between">
+          <p class="footer__copyright">
+            &#169;2012-2020 Preply Inc.
+          </p>
+          <div class="footer__privacy">
+            <a href="#">Privacy Policy</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
