--- a/src/index.html
+++ b/src/index.html
@@ -332,7 +332,63 @@
       </div>
     </section>
 
-    <section class="in_news"></section>
+    <section class="in-news">
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <h3 class="in-news__title col-12">Preply in the news</h3>
+          <p
+            class="in-news__description col-12"
+          >
+            Ok, now we're just showing off...
+          </p>
+
+          <div class="in-news__news news col-12 col-lg-4">
+            <div class="news__wrapper news__wrapper--green">
+              <h4 class="news__quotes">“</h4>
+              <p class="news__description">
+                Online learning platforms such as Preply will continue to see growth...”
+              </p>
+              <img
+                alt="TechCrunch"
+                src="./images/news/TechCrunch.png">
+              </img>
+            </div>
+          </div>
+
+          <div class="in-news__news news col-12 col-lg-4">
+            <div class="news__wrapper news__wrapper--gray">
+              <h4 class="news__quotes">“</h4>
+              <p class="news__description">
+                In the U.S. - its single largest market - it has seen the
+                number of new customers double week over week.”
+              </p>
+              <img
+                alt="Forbes"
+                src="./images/news/Forbes.png">
+              </img>
+            </div>
+          </div>
+
+          <div class="in-news__news news col-12 col-lg-4">
+            <div class="news__wrapper news__wrapper--blue">
+              <h4 class="news__quotes">“</h4>
+              <p class="news__description">
+                Preply users have taken two million classes to date
+                with 15K verified tutors of 160 nationalities teaching
+                50 languages [and Preply states] revenue has grown
+                tenfold over the last three years.”
+              </p>
+              <img
+                alt="EdSurge"
+                src="./images/news/EdSurge.png">
+              </img>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
     <section class="shape_of_future slogan">
       <div class="container">
         <div class="row slogan__wrapper">
