--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="stock"
                 src="images/perks/Stock.svg"
@@ -267,7 +267,7 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="location"
                 src="images/perks/Location.svg"
@@ -309,7 +309,7 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="holidays"
                 src="images/perks/Holidays.svg"
