--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
           </p>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="study"
                 src="images/perks/Study.svg"
@@ -246,7 +246,7 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="insurance"
                 src="images/perks/Insurance.svg"
@@ -288,7 +288,7 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="equipment"
                 src="images/perks/Equipment.svg"
