--- a/src/index.html
+++ b/src/index.html
@@ -248,7 +248,7 @@
           </p>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="study"
                 src="images/perks/Study.svg"
@@ -290,7 +290,7 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="insurance"
                 src="images/perks/Insurance.svg"
@@ -332,7 +332,7 @@
           </div>
 
           <div class="perks__perk perk col-6 col-lg-4">
-            <div class="perk__image-wrapper">
+            <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="equipment"
                 src="images/perks/Equipment.svg"
