--- a/src/index.html
+++ b/src/index.html
@@ -456,7 +456,12 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="footer__logo"></div>
-          <div class="footer__socials"></div>
+          <div class="footer__socials">
+            <a href="#" class="footer__linkedin"></a>
+            <a href="#" class="footer__facebook"></a>
+            <a href="#" class="footer__instagram"></a>
+            <a href="#" class="footer__youtube"></a>
+          </div>
         </div>
         <div class="row justify-content-between">
           <p class="footer__copyright">
